--- a/css/style.css
+++ b/css/style.css
@@ -151,25 +151,27 @@ a{
 }
 
 .logo {
-    float: left;
+   position: absolute;
+    top:0;
+    
     margin-top: 10px;
     clear: both;
+    z-index: 9999
 }
 
 
-
-.nav{width:100%; text-align:center; position: relative; z-index: 9999}
+.nav{width:100%; text-align:center; position: relative; z-index: 999; margin-left: 10%}
 .nav>ul{width: 100%; padding-top: 15px;}
-.nav>ul>li{display: inline-block; width: 11%; position: relative}
+.nav>ul>li{display: inline-block; width: 12%; position: relative}
 .nav>ul>li:last-child{margin-right:0}
-.nav li a{font-size: 1rem; display: block; padding: 1%; width: 100%}
-.nav li a:hover{background: rgba(0,0,0,0.5);color:#fff; font-weight: bold}
+.nav li a{font-size: 1rem; display: block; width: 100%; color:#999}
+.nav li a:hover{background: rgba(0,0,0,0.5);color:#fff; }
 
 
-.sub_bg{display:none; width: 100%; background:#0b4596; height: 310px; position: absolute; top:81px; left: 0; z-index: 900}
+.sub_bg{display:none; width: 100%; background:#0b4596; height: 280px; position: absolute; top:81px; left: 0; z-index: 900}
 .submenu{display:none; width: 100%; z-index: 990; position: absolute; top:67px; left: ; margin-left:0px; }
 .submenu li{width: 100%}
-.submenu li a{display: block;  color:#fff; font-size: 0.8rem}
+.submenu li a{display: block;  color:#fff; font-size: 0.9rem}
 
 
 
