--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ a{
 #mainimg {
     width: 100%;
     height: 640px;    
-    background-image: url(../images/mainimg.jpg);
+    background-image: url(../images/main_img1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center
