--- a/css/style_sub.css
+++ b/css/style_sub.css
@@ -1,179 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
-
 /* 공통 */
-* {
-    padding: 0;
-    margin: 0
-}
-
-ul {
-    list-style: none
-}
-
-.inner {
-    width: 1300px;
-    margin: 0 auto
-}
-
-.hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    overflow: hidden
-}
-
-a { 
-    text-decoration: none;
-    font-family: 'Noto Sans KR', sans-serif;
-}
-
-
-
-
-
-
-/* 상단 */
-/* 위쪽상단 */
-.top_header {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border-bottom: 1px solid #e1e1e1;
-    font-size: 13px;
-    background-color: #0b4596;
-}
-
-.top_header > .inner:after {
-    display: inline-block;
-    content: "";
-    clear: both
-}
-
-.site {
-    width: 274px;
-    float: left;
-    color: #6e6e6e;
-    font-weight: bold;
-
-}
-
-.site > li {
-    float: left;
-    width: 32.9%;
-    background-color: #f0f0f0;
-    border-right: 1px solid #e1e1e1
-}
-
-.site:after {
-    display: inline-block;
-    content: "";
-    clear: both
-}
-
-.site > li:nth-child(1) {
-    background-color: #212121;
-    color: #fff
-}
-
-.site > li:nth-child(3) > select {
-    width: 100%;
-    height: 38px;
-    border: none;
-    background-color: #f0f0f0;
-    color: #6e6e6e;
-    font-weight: bold
-}
-
-
-.util {
-    width: 282px;
-    float: right;
-
-}
-
-.util > li {
-    width: 25%;
-    float: left;
-    color: #fff;
-    font-weight: bold
-}
-
-.util:after {
-    display: inline-block;
-    content: "";
-    clear: both
-}
-
-.util > li:before {
-    display: inline-block;
-    content: "";
-    width: 1px;
-    height: 10px;
-    background-color: #e1e1e1;
-    margin: 0 10px 0 0
-}
-
-.util > li:nth-child(1):before {
-    display: none
-}
-
-.util > li:nth-child(1) {
-    width: 20%;
-    padding-left: 5%
-}
-
-
-/* 아래쪽상단 */
-
-.bottom_header {
-    width: 100%;
-    height: 92px;
-    line-height: 50px;
-    text-align: center;
-    border-bottom: 1px solid #e1e1e1;
-    position: relative;
-    font-size: 15px
-}
-
-.bottom_header > .inner:after {
-    display: inline-block;
-    content: "";
-    clear: both
-}
-
-.sub_menu_btn{display: none}
-
-
-
-
-
-
-
-.logo {
-   position: absolute;
-    top:0;
-    
-    margin-top: 10px;
-    clear: both;
-    z-index: 9999
-}
-
-
-.nav{width:100%; text-align:center; position: relative; z-index: 999; margin-left: 10%}
-.nav>ul{width: 100%; padding-top: 15px;}
-.nav>ul>li{display: inline-block; width: 12%; position: relative}
-.nav>ul>li:last-child{margin-right:0}
-.nav li a{font-size: 1rem; display: block; width: 100%; color:#999}
-.nav li a:hover{background: rgba(0,0,0,0.5);color:#fff; }
-
-
-.sub_bg{display:none; width: 100%; background:#0b4596; height: 280px; position: absolute; top:81px; left: 0; z-index: 900}
-.submenu{display:none; width: 100%; z-index: 990; position: absolute; top:67px; left: ; margin-left:0px; }
-.submenu li{width: 100%}
-.submenu li a{display: block;  color:#fff; font-size: 0.9rem}
-
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
 
 
 
@@ -521,17 +347,12 @@ sub_icon:after {
     .inner{width: 100%}
     .inner:after{content: ""; display: block; clear: both}
     .sub_menu_btn{position: absolute;top:5px;left: 5px; display: block; margin: 1.2%;}
-    .sub_menu_btn img{width: 80%;}
+    .sub_menu_btn img{width: 80%; TOP:80px}
         
-    .menu {display: none;}
-    .logo{float: left; width: 100%;text-align: center;
-    margin-top: 2%;}
-    .logo img{width: 25%; }
-    
-    
+  
     
     .submain_in{width: 100%}
-    .submain_in img{width: 70%}
+    .submain_in img{width:; }
     
     
     
@@ -604,7 +425,7 @@ sub_icon:after {
     .inner{width: 100%}
     .inner:after{content: ""; display: block; clear: both}
     .sub_menu_btn{position: absolute;top:5px;left: 5px; display: block; margin: 1.2%;}
-    .sub_menu_btn img{width: 80%;}
+    .sub_menu_btn img{width: 80%; }
     
     
     .menu {
@@ -617,11 +438,12 @@ sub_icon:after {
         margin-top: 1%;}
     .logo img{width: 40%;}
     
-    .main_text{margin-top: 0;top: 10%; padding-top: 0}    
+    .main_text{margin-top: 0;top: 25%; padding-top: 0}    
      .submain_in {position: absolute;top: 0; width: 100%; height: 0; padding-top: calc(622 / 1920 * 100%) }
     #submain_img{height: 0; padding-top: calc(622 / 1920 * 100%);padding-bottom: calc(622 / 1920 * 100%); position: relative}
-    .submain_in img{width: 80%; padding-top: calc(470 / 1920 * 100%);top: 0;}
-    .submain_in h2{font-size: 25px;}
+    .submain_in img{width: 80%; padding-top: calc(470 / 1920 * 100%);top:40px;}
+
+    .submain_in h2{font-size: 25px; }
     .submain_in p{font-size: 12px;margin-top:0;}
     
     
