--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ display: block; clear: both}
 
 @media (max-width:1279px) {
     #wrap{width: 100%;
-     margin-left: 0.5%; margin-right: 0.5%}
+     }
     .top_header{display: none}
     .bottom_header{height: 1%; border: none
     }
@@ -631,7 +631,7 @@ display: block; clear: both}
 
 @media (max-width:768px) {
     #wrap{width: 100%;
-     margin-left: 0.5%; margin-right: 0.5%}
+    }
     #mainimg{width: 100%; height: 0; padding-top: calc(884/768*100%);  background: url(../images/mob_main_img.jpg);
     background-repeat: no-repeat;
     background-position: center center;
