--- a/css/style_sub.css
+++ b/css/style_sub.css
@@ -340,54 +340,71 @@ sub_icon:after {
       
     }
 
-    .top_header {
+     .top_header {
         display: none;
     }
     .inner{width: 100%}
     .inner:after{content: ""; display: block; clear: both}
     .sub_menu_btn{position: absolute;top:5px;left: 5px; display: block; margin: 1.2%;}
-    .sub_menu_btn img{width: 80%; TOP:80px}
+    .sub_menu_btn img{width: 80%;}
         
-  
+   
+    .submain_in {position: absolute;top: -50px; width: 100%; height: 0; padding-top: calc(62 / 1920 * 100%) }
+    #submain_img{height: 0; padding-top: calc(622 / 1920 * 100%);padding-bottom: calc(622 / 1920 * 100%); position: relative}
+    .submain_in img{width: 75%; padding-top: calc(450 / 1620 * 100%);top:; ;}
+    .submain_in{width: 100%; }
     
-    .submain_in{width: 100%}
-    .submain_in img{width:; }
+    
+    .main_text h2{font-size: 35px;}
+    .main_text p{font-size: 1rem;margin-top:2%;}
+    
+    .text1{height: auto; margin-bottom: 50px; margin-top: 150px;}
+    .text1 span{font-size: 1.7rem}
+    .text1 p{font-size: 1rem}
     
     
     
-    .sub_icon{width: 100%; margin-top: 60px;}
+    
+    
+    .sub_icon{width: 90%; margin-top: 100px; height: auto}
     .sub_icon_in1{width: 100%}
     .icon_box{width: 33.3%}
+    .icon_box h3{font-size:1.5rem}
+    .icon_box dd{font-size: 0.9rem}
+    .icon_box1 h3{font-size:1.5rem}
+    .icon_box1 dd{font-size: 0.9rem}
+    .icon_box img{width: 35%}    
+    .icon_box1 img{width: 25%}
     
     
     .sub_icon_in2{width: 80%}
-    .icon_box1{}
+    
      
     
     
     
     
-    #sub_content h3{width: 100%; margin-top:5%; font-size: 2.5rem; margin-left: 3%}
-    #sub_content{width: 100%; }
+    
+    #sub_content{width: 80%; height: auto; text-align: center}
+    #sub_content h3{width: 100%; margin-top:80px; font-size: 2rem; }
+        
+    
     .lsub_box{width: 100%; text-align: center;box-sizing: border-box}
     .lsub_box img{width:90%}
-    .lsub_box h4{font-size: 1.8em}
+    .lsub_box h4{font-size: 1.7em}
     .lsub_box p{font-size: 1rem;margin-top: 15px}
     .sub_btn{width: 25%; margin: 5% auto;
    }
     .rsub_box{width: 100%; text-align: center; }
     .rsub_box img{width:90%}
-    .rsub_box h4{font-size: 1.8rem}
+    .rsub_box h4{font-size: 1.7rem}
     .rsub_box p{font-size: 1rem; margin-top: 15px; }
     
     
-    
-    #blue_line{clear: both;}
-    #blue_line > div{width: 100%; }
-    #blue_line > div > p{font-size: 1rem}
+
     
     
-  .top_footer > .inner{width: 100%}
+    .top_footer > .inner{width: 100%}
     .top_footer > .inner > ul{ width: 100%; padding-bottom: 5%}
     .top_footer > .inner > ul > li{font-size: 0.9rem;}
     
@@ -432,30 +449,29 @@ sub_icon:after {
     
     .logo{float: left;
         width: 100%;
-       text-align: center;
+        text-align: center;
         margin-top: 1%;}
     .logo img{width: 40%;}
     
     .main_text{margin-top: 0;top: 25%; padding-top: 0}    
      .submain_in {position: absolute;top: 0; width: 100%; height: 0; padding-top: calc(622 / 1920 * 100%) }
-    #submain_img{height: 0; padding-top: calc(622 / 1920 * 100%);padding-bottom: calc(622 / 1920 * 100%); position: relative}
+    #submain_img{height: 0; padding-top: calc(622 / 1920 * 100%);padding-bottom: calc(622 / 1920 * 100%); position: relative; margin-bottom: 100px;}
     .submain_in img{width: 80%; padding-top: calc(470 / 1920 * 100%);top:40px;}
 
     .submain_in h2{font-size: 25px; }
-    .submain_in p{font-size: 12px;margin-top:0;}
+    .submain_in p{font-size: 12px;margin-top:;}
     
     
     
-
-    #sub_content h3{width: 100%; margin-top:1% ;font-size: 1.5rem;margin-left: 3%}
-    .sub_icon{width: 100%; border: none;border-radius: 0; margin-top: 10%; height: 1100px;}
-    .sub_icon_in1{width: 100%}
-    .icon_box{width: 100%;margin-top: 30px;}
+    
+    .sub_icon{width: 100%; border: none; border-radius: 0; margin-top: 20%; height: auto;}
+    .sub_icon_in1{width: 100%; height:auto; }
+    .icon_box{width: 100%;margin-top: 30px; height: auto;}
     .icon_box dl{width: 100%;}
     .icon_box:nth-child(2) dd{margin-left: 0%}
     .icon_box img{width: 20%;} 
-    .sub_icon_in2{width: 100%}
-    .icon_box1{width: 100%;;}
+    .sub_icon_in2{width: 100%; height:auto;}
+    .icon_box1{width: 100%; height: auto}
     .icon_box1 dl{width: 100%}
     .icon_box1 img{width: 18%;}
     
@@ -463,7 +479,7 @@ sub_icon:after {
     .icon_box dd{font-size: 13px; text-align: center}
     .icon_box1 h3{font-size: 20px;}
     .icon_box1 dd{font-size: 13px;text-align: center;margin-left: 0}
-    .icon_box1:last-child dd{margin-left: 0}
+    .icon_box1:last-child dd{margin-left: 0; }
     
     
     
@@ -471,27 +487,17 @@ sub_icon:after {
     
     
     
-    #sub_content{width: 100%; }
+    #sub_content{height: auto; width: 100%;clear: both}
+    #sub_content h3{width: 100%; font-size: 1.5rem;padding-top: 80px}
     .lsub_box{width: 100%; text-align: center}
     .lsub_box img{width:90%}
     .lsub_box h4{font-size: 1.3rem}
     .lsub_box p{font-size: 0.8rem;margin-top: 5px}
-    .sub_btn{width: 25%; margin: 5% auto;
-   }
+    .sub_btn{width: 25%; margin: 5% auto;}
     .rsub_box{width: 100%; text-align: center; }
     .rsub_box img{width:90%}
     .rsub_box h4{font-size: 1.3rem}
     .rsub_box p{font-size: 0.8rem;margin-top: 5px;}
-    
-    
-    
-    
-    
-    
-    #blue_line{clear: both;}
-    #blue_line > div{width: 100%; }
-    #blue_line > div > p{font-size: 0.8rem; line-height: 20px; padding:6.5% 3%;}
-    
     
    
     
