--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 #mainimg {
     width: 100%;
     height: 640px;    
-    background-image: url(../images/main_img1.jpg);
+    background-image: url(../images/main_img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center
@@ -622,7 +622,7 @@ display: block; clear: both}
     .add_r li{font-size: 13px;}
     .add_img{right: 0.5%}
     
-    .top_footer > .inner{width: 100%} .top_footer > .inner
+    .top_footer > .inner{width: 100%} 
     
     
     
@@ -644,7 +644,7 @@ display: block; clear: both}
     #wrap{width: 100%;
     }
     #mainimg{width: 100%; height: 0; background-image:url(../images/mob_mainImg.jpg);
-    padding-top: calc(584/889*100%) }  
+    padding-top: calc(732/768*100%) }  
     .menu{display: none}
     .top_header{display: none}
     .bottom_header{border: none}
@@ -757,19 +757,19 @@ display: block; clear: both}
     
     .add_in{border-top: 1px solid #999 ; height: auto}
     .add_l{width: 100%; margin-top: 0px; }
-    .add_l > h3{font-size: 1.6rem; color:#000 ;}
+    .add_l > h3{font-size: 1.4rem; color:#000 ;}
     .add_l > p{display: none}
     
     .add_r{height: auto; padding-bottom: 20px; width: 100%; text-align: center; border-bottom: 1px solid #999}
     .add_r ul{margin-top:20px;  }
-    .add_r li{font-size: 0.9rem; line-height: 30px; color:#000 }
+    .add_r li{font-size: 0.8rem; line-height: 30px; color:#000 }
     .add_img{display: none; }
     
     
      #footer{height:auto; margin-bottom: 50px;}
   
     
-    
+
     
 }
 
