--- a/css/commonness.css
+++ b/css/commonness.css
@@ -218,7 +218,8 @@ a {
     .top_footer > .inner > ul > li{font-size: 0.9rem;}
     
     .f_logo img{width: 200px; margin-top: 3%}
-    .copyright{font-size: 0.8rem}
+    .copyright{font-size: 0.8rem;
+    width: 95%; margin: 10px auto}
     
     
 }
@@ -260,6 +261,8 @@ a {
  
     .f_logo img{width: 150px; margin-top: 3%}
     .top_footer{display: none}
+    .copyright{width: 95%; }
+
    
     
     
